# SecureVox

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-windows.yml
android/: gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  setup_whisper.sh  whisper_jni.cpp
docs/: index.html  privacy.html  styles.css
ios/: .gitignore  README.md
ios/SecureVoxWidget/: AppGroupManager.swift  Info.plist  SecureVoxWidget.entitlements  SecureVoxWidget.swift  SecureVoxWidgetBundle.swift
ios/VoiceNotesOndevice/: VoiceNotesOndevice.entitlements
ios/VoiceNotesOndevice.xcodeproj/: project.pbxproj
ios/VoiceNotesOndevice.xcodeproj/xcshareddata/xcschemes/: VoiceNotesOndevice.xcscheme
ios/VoiceNotesOndevice/App/: AppConstants.swift  AppGroupManager.swift  AppIntents.swift  ContentView.swift  VoiceNotesOndeviceApp.swift
ios/VoiceNotesOndevice/CoreML/: AudioPreprocessor.swift  ChunkProcessor.swift  README.md  VADFilter.swift  WhisperModelLoader.swift
ios/VoiceNotesOndevice/Models/: ExportFormat.swift  Recording.swift  SourceType.swift  TranscriptSegment.swift  TranscriptionStatus.swift  WhisperLanguage.swift
ios/VoiceNotesOndevice/Resources/: Info.plist  PrivacyInfo.xcprivacy
ios/VoiceNotesOndevice/Services/: AudioPlayerService.swift  AudioRecorderService.swift  BatchTranscriptionManager.swift  BatchTranscriptionQueue.swift  CoreMLTranscriber.swift  CustomDictionaryService.swift  ExportService.swift  FeedbackService.swift  MediaImportService.swift  RecordingStore.swift  RecycleBinService.swift  TranscriptExporter.swift
ios/VoiceNotesOndevice/Utils/: AudioFileManager.swift  Logger.swift  PermissionManager.swift  TimeFormatters.swift
ios/VoiceNotesOndevice/ViewModels/: RecorderViewModel.swift  RecordingDetailViewModel.swift  RecordingsListViewModel.swift  SettingsViewModel.swift
ios/VoiceNotesOndevice/Views/Common/: RatingPromptView.swift
ios/VoiceNotesOndevice/Views/Components/: ConfirmationDialog.swift  ErrorBanner.swift  LoadingOverlay.swift
ios/VoiceNotesOndevice/Views/Detail/: PlaybackBar.swift  RecordingDetailView.swift  SegmentRow.swift  TranscriptionProgressView.swift
ios/VoiceNotesOndevice/Views/Export/: ExportSheet.swift
ios/VoiceNotesOndevice/Views/FAQ/: FAQView.swift
ios/VoiceNotesOndevice/Views/Import/: DocumentPickerView.swift  ImportMenuView.swift  PhotosPickerView.swift
ios/VoiceNotesOndevice/Views/Recording/: AudioRecorderExample.swift  RecorderSheet.swift  RecordingControls.swift  WaveformView.swift
ios/VoiceNotesOndevice/Views/Recordings/: EmptyLibraryView.swift  RecordingRow.swift  RecordingsListView.swift
ios/VoiceNotesOndevice/Views/Settings/: CustomDictionaryView.swift  LanguagePickerView.swift  RecycleBinView.swift  SettingsView.swift  StorageUsageView.swift
macos/SecureVox.xcodeproj/: project.pbxproj
macos/SecureVox/App/: AppConstants.swift  ContentView.swift  SecureVoxApp.swift
macos/SecureVox/Models/: Recording.swift  TranscriptSegment.swift  WhisperLanguage.swift
macos/SecureVox/Resources/: Info.plist
macos/SecureVox/Services/: AudioPlayerService.swift  AudioRecorderService.swift  BatchTranscriptionManager.swift  CustomDictionaryService.swift  ExportService.swift  LaunchAtLoginService.swift  MediaImportService.swift  MicrophoneService.swift  RecordingStore.swift  RecycleBinService.swift  TranscriptionService.swift
macos/SecureVox/ViewModels/: RecordingsViewModel.swift  SettingsViewModel.swift
macos/SecureVox/Views/Detail/: RecordingDetailView.swift
macos/SecureVox/Views/FAQ/: FAQView.swift
macos/SecureVox/Views/Home/: HomeContentView.swift
macos/SecureVox/Views/Onboarding/: ModelSelectionView.swift
macos/SecureVox/Views/RecycleBin/: RecycleBinView.swift
macos/SecureVox/Views/Settings/: SettingsView.swift
macos/SecureVox/Views/Vocabulary/: VocabularyView.swift
windows/: SecureVox.sln
windows/src/SecureVox.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SecureVox.App.csproj  app.manifest
windows/src/SecureVox.App/ViewModels/: RecordingsViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
windows/src/SecureVox.App/Views/: CustomDictionaryPage.xaml  CustomDictionaryPage.xaml.cs  FAQPage.xaml  FAQPage.xaml.cs  RecordingsPage.xaml  RecordingsPage.xaml.cs  RecycleBinPage.xaml  RecycleBinPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ShortcutsPage.xaml  ShortcutsPage.xaml.cs
windows/src/SecureVox.Core/: SecureVox.Core.csproj
windows/src/SecureVox.Core/Models/: ExportFormat.cs  (+4 more)
windows/src/SecureVox.Native/: CMakeLists.txt  whisper_wrapper.cpp  whisper_wrapper.h
windows/src/SecureVox.Whisper/: SecureVox.Whisper.csproj  TranscriptionResult.cs  WhisperInterop.cs  WhisperProcessor.cs
(+39 files in other folders)
